--- a/index.html
+++ b/index.html
@@ -251,7 +251,8 @@
             <a class="footer__subtitle-signature footer__subtitle-direct" href="#"><p>Web Design — Direct Line Development</p></a>
         </section>
     </footer>
-    <div class="modalWindow modalWindow_js hidden">
+    <div class="modalWindow_js hidden">
+        <div class="modalWindow"></div>
         <div class="modalWindow__form">
             <button class="modalWindow__closeBtn modalWindow__closeBtn_js"></button>
             <form class="modalWindow__form-inner" action="#" method="post">
