--- a/pages/Toys.html
+++ b/pages/Toys.html
@@ -55,7 +55,7 @@
         <form class="div__form container">
             <div class="div__form-range" tabindex="0">
                 <p class="div__form-text" tabindex="0">Cost</p>
-                <input class="div__form-slider" aria-label="link to slider" type="range" name="cost" min="0" max="500" value="108">
+                <input class="div__form-slider slider-progress" aria-label="link to slider" type="range" name="cost" min="0" max="500" value="108">
                 <div class="div__form-numbers" tabindex="0">
                     <label>0</label>
                     <label>500</label>
@@ -267,6 +267,7 @@
             <p class="footer__subtitle-signature subtitle__signature-title">Copyright © 2018 Dlk • Design Life Kids</p>
             <a class="footer__subtitle-signature footer__subtitle-direct" href="#"><p>Web Design — Direct Line Development</p></a>
         </section>
-    </footer>.
+    </footer>
+    <script src="../index.js"></script>
 </body>
 </html>
