--- a/pages/Catalog.html
+++ b/pages/Catalog.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Catalog</title>
-    <link rel="stylesheet" href="../styles/normalize.css">
-    <link rel="stylesheet" href="../styles/common.css">
-    <link rel="stylesheet" href="../styles/Catalog.css">
-    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="../styles/normalize.min.css">
+    <link rel="stylesheet" href="../styles/common.min.css">
+    <link rel="stylesheet" href="../styles/catalog.min.css">
+    <link rel="stylesheet" href="../styles/style.min.css">
 </head>
 <body>
     <header class="header container">
@@ -54,29 +54,29 @@
         <h2 class="block__services-title">services</h2>
         <ul class="block__services-list">
             <li class="block__services-item block__services-sweater-item">
-                <img class="block__services-sweater" src="../images/Category/sweater.jpg" alt="block__services-pic">
+                <img class="block__services-sweater" src="../images/Category/sweater.jpg" alt="block__services-pic" width="244" height="177">
                 <a href="../pages/toys.html" class="block__services-link">APPAREL KIDS</a>
             </li>
             <li class="block__services-item block__services-sock-item">
-                <img class="block__services-sock" src="../images/Category/Product-two.png" alt="services__list-pic">
+                <img class="block__services-sock" src="../images/Category/Product-two.png" alt="services__list-pic" width="208" height="244">
                 <a href="../pages/toys.html" class="block__services-link">HOLIDAY SHOP</a>
             </li>
             <li class="block__services-item block__services-deer-item">
-                <img class="block__services-deer" src="../images/Category/Product_bkd-free.png" alt="services__list-pic">
+                <img class="block__services-deer" src="../images/Category/Product_bkd-free.png" alt="services__list-pic" width="270" height="270">
                 <a href="../pages/toys.html" class="block__services-link">TOYS</a>
             </li>
         </ul>
         <ul class="block__services-aside">
             <li class="block__services-item block__services-yeti-item">
-                <img class="block__services-yeti" src="../images/Category/Product-four.png" alt="services__list-pic">
+                <img class="block__services-yeti" src="../images/Category/Product-four.png" alt="services__list-pic" width="240" height="250">
                 <a href="../pages/toys.html" class="block__services-link">ACCESSORIES</a>
             </li>
             <li class="block__services-item block__services-flamingos-item">
-                <img class="block__services-flamingos" src="../images/Category/flamingo.jpg" alt="services__list-pic">
+                <img class="block__services-flamingos" src="../images/Category/flamingo.jpg" alt="services__list-pic" width="248" height="248">
                 <a href="../pages/toys.html" class="block__services-link">SALE</a>
             </li>
             <li class="block__services-item block__services-dress-item">
-                <img class="block__services-dress" src="../images/Category/dress.jpg" alt="services__list-pic">
+                <img class="block__services-dress" src="../images/Category/dress.jpg" alt="services__list-pic" width="271" height="204 width="30" height="30"">
                 <a href="../pages/toys.html" class="block__services-link block__services-link-dress">APPAREL ADULTS</a>
             </li>
         </ul>   
@@ -146,22 +146,22 @@
                     <ul class="footer__section-logo">
                         <li class="footer__section-icon">
                             <a class="footer__section-link" href="#">
-                                <img class="footer__section-img" src="../images/footer/facebook.svg" alt="Logotype Facebook">
+                                <img class="footer__section-img" src="../images/footer/facebook.svg" alt="Logotype Facebook" width="30" height="30">
                             </a>
                         </li>
                         <li class="footer__section-icon">
                             <a class="footer__section-link" href="#">
-                                <img class="footer__section-img" src="../images/footer/twitter.svg" alt="Logotype Twitter">
+                                <img class="footer__section-img" src="../images/footer/twitter.svg" alt="Logotype Twitter" width="30" height="30">
                             </a>
                         </li>
                         <li class="footer__section-icon">
                             <a class="footer__section-link" href="#">
-                                <img class="footer__section-img" src="../images/footer/pinterest.svg" alt="Logotype Pinterest">
+                                <img class="footer__section-img" src="../images/footer/pinterest.svg" alt="Logotype Pinterest" width="30" height="30">
                             </a>
                         </li>
                         <li class="footer__section-icon">
                             <a class="footer__section-link" href="#">
-                                <img class="footer__section-img" src="../images/footer/instagram.svg" alt="Logotype Instagram">
+                                <img class="footer__section-img" src="../images/footer/instagram.svg" alt="Logotype Instagram" width="30" height="30">
                             </a>
                         </li>
                     </ul>
