--- a/pages/ContactUs.html
+++ b/pages/ContactUs.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contaform</title>
-    <link rel="stylesheet" href="../styles/normalize.css">
-    <link rel="stylesheet" href="../styles/common.css">
-    <link rel="stylesheet" href="../styles/ContactUs.css">
-    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="../styles/normalize.min.css">
+    <link rel="stylesheet" href="../styles/common.min.css">
+    <link rel="stylesheet" href="../styles/contactUs.min.css">
+    <link rel="stylesheet" href="../styles/style.min.css">
 </head>
 <body>
     <header class="header container">
@@ -151,22 +151,22 @@
                     <ul class="footer__section-logo">
                         <li class="footer__section-icon">
                             <a class="footer__section-link" href="#">
-                                <img class="footer__section-img" src="../images/footer/facebook.svg" alt="Logotype Facebook">
+                                <img class="footer__section-img" src="../images/footer/facebook.svg" alt="Logotype Facebook" width="30" height="30">
                             </a>
                         </li>
                         <li class="footer__section-icon">
                             <a class="footer__section-link" href="#">
-                                <img class="footer__section-img" src="../images/footer/twitter.svg" alt="Logotype Twitter">
+                                <img class="footer__section-img" src="../images/footer/twitter.svg" alt="Logotype Twitter" width="30" height="30">
                             </a>
                         </li>
                         <li class="footer__section-icon">
                             <a class="footer__section-link" href="#">
-                                <img class="footer__section-img" src="../images/footer/pinterest.svg" alt="Logotype Pinterest">
+                                <img class="footer__section-img" src="../images/footer/pinterest.svg" alt="Logotype Pinterest" width="30" height="30">
                             </a>
                         </li>
                         <li class="footer__section-icon">
                             <a class="footer__section-link" href="#">
-                                <img class="footer__section-img" src="../images/footer/instagram.svg" alt="Logotype Instagram">
+                                <img class="footer__section-img" src="../images/footer/instagram.svg" alt="Logotype Instagram" width="30" height="30">
                             </a>
                         </li>
                     </ul>
