--- a/pages/Blog.html
+++ b/pages/Blog.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/normalize.css">
-    <link rel="stylesheet" href="../styles/common.css">
-    <link rel="stylesheet" href="../styles/Blog.css">
-    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="../styles/normalize.min.css">
+    <link rel="stylesheet" href="../styles/common.min.css">
+    <link rel="stylesheet" href="../styles/blog.min.css">
+    <link rel="stylesheet" href="../styles/style.min.css">
     <title>Blog</title>
 </head>
 <body>
@@ -54,37 +54,37 @@
         <h2 class="blog__title">blog</h2>
         <ul class="blog__list">
             <li class="blog__list-item" tabindex="0">
-                <img class="blog__list-img" src="../images/Blog/blog-one.png" alt="blog__list-thumb">
+                <img class="blog__list-img" src="../images/Blog/blog-one.png" alt="blog__list-thumb" width="380" height="220">
                 <p class="blog__list-date" tabindex="0">23rd August 2018</p>
                 <a href="#" class="blog__list_desc" tabindex="0">Top 5 fastest growing it service companies in philly</a>
                 <p class="blog__list-text" tabindex="0">Direct Line Development’s Team is excited to announce that we received UpCity’s 2019 Local Excellence Award! This prestigious award is annually presented to the Top 1% of service providers in the given marketplace.</p>
             </li>
             <li class="blog__list-item" tabindex="0">
-                <img class="blog__list-img" src="../images/Blog/blog-two.png" alt="blog__list-thumb">
+                <img class="blog__list-img" src="../images/Blog/blog-two.png" alt="blog__list-thumb" width="380" height="220">
                 <p class="blog__list-date" tabindex="0">23rd August 2018</p>
                 <a href="#" class="blog__list_desc blog__list-title" tabindex="0">Best financial</a>
                 <p class="blog__list-text" tabindex="0">Direct Line Development is honored to be recognized as one of the Top 100 Fastest Growing Companies 2019 in Philadelphia, according to Growjo’s ranking.</p>
             </li>
             <li class="blog__list-item" tabindex="0">
-                <img class="blog__list-img" src="../images/Blog/blog-free.png" alt="blog__list-thumb">
+                <img class="blog__list-img" src="../images/Blog/blog-free.png" alt="blog__list-thumb" width="380" height="220">
                 <p class="blog__list-date" tabindex="0">23rd August 2018</p>
                 <a href="#" class="blog__list_desc" tabindex="0">Company logo or brand identity: which one is more important? brand identity</a>
                 <p class="blog__list-text" tabindex="0">To survive in the world of digital marketing, you need to keep up with the latest SEO trends. Here are our simple, but effective, SEO tips for small business success.</p>
             </li>
             <li class="blog__list-item" tabindex="0">
-                <img class="blog__list-img" src="../images/Blog/blog-four.png" alt="blog__list-thumb">
+                <img class="blog__list-img" src="../images/Blog/blog-four.png" alt="blog__list-thumb" width="380" height="220">
                 <p class="blog__list-date" tabindex="0">23rd August 2018</p>
                 <a href="#" class="blog__list_desc blog__list-title" tabindex="0">Best financial</a>
                 <p class="blog__list-text" tabindex="0">Direct Line Development is honored to be recognized as one of the Top 100 Fastest Growing Companies 2019 in Philadelphia, according to Growjo’s ranking.</p>
             </li>
             <li class="blog__list-item" tabindex="0">
-                <img class="blog__list-img" src="../images/Blog/blog-five.png" alt="blog__list-thumb">
+                <img class="blog__list-img" src="../images/Blog/blog-five.png" alt="blog__list-thumb" width="380" height="220">
                 <p class="blog__list-date" tabindex="0">23rd August 2018</p>
                 <a href="#" class="blog__list_desc" tabindex="0">Company logo or brand identity: which one is more important? brand identity</a>
                 <p class="blog__list-text" tabindex="0">To survive in the world of digital marketing, you need to keep up with the latest SEO trends. Here are our simple, but effective, SEO tips for small business success.</p>
             </li>
             <li class="blog__list-item" tabindex="0">
-                <img class="blog__list-img" src="../images/Blog/blog-six.png" alt="blog__list-thumb">
+                <img class="blog__list-img" src="../images/Blog/blog-six.png" alt="blog__list-thumb" width="380" height="220">
                 <p class="blog__list-date" tabindex="0">23rd August 2018</p>
                 <a href="#" class="blog__list_desc" tabindex="0">Top 5 fastest growing it service companies in philly</a>
                 <p class="blog__list-text" tabindex="0">Direct Line Development’s Team is excited to announce that we received UpCity’s 2019 Local Excellence Award! This prestigious award is annually presented to the Top 1% of service providers in the given marketplace.</p>
@@ -164,22 +164,22 @@
                     <ul class="footer__section-logo">
                         <li class="footer__section-icon">
                             <a class="footer__section-link" href="#">
-                                <img class="footer__section-img" src="../images/footer/facebook.svg" alt="Logotype Facebook">
+                                <img class="footer__section-img" src="../images/footer/facebook.svg" alt="Logotype Facebook" width="30" height="30">
                             </a>
                         </li>
                         <li class="footer__section-icon">
                             <a class="footer__section-link" href="#">
-                                <img class="footer__section-img" src="../images/footer/twitter.svg" alt="Logotype Twitter">
+                                <img class="footer__section-img" src="../images/footer/twitter.svg" alt="Logotype Twitter" width="30" height="30">
                             </a>
                         </li>
                         <li class="footer__section-icon">
                             <a class="footer__section-link" href="#">
-                                <img class="footer__section-img" src="../images/footer/pinterest.svg" alt="Logotype Pinterest">
+                                <img class="footer__section-img" src="../images/footer/pinterest.svg" alt="Logotype Pinterest" width="30" height="30">
                             </a>
                         </li>
                         <li class="footer__section-icon">
                             <a class="footer__section-link" href="#">
-                                <img class="footer__section-img" src="../images/footer/instagram.svg" alt="Logotype Instagram">
+                                <img class="footer__section-img" src="../images/footer/instagram.svg" alt="Logotype Instagram" width="30" height="30">
                             </a>
                         </li>
                     </ul>
