--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
         </section>
     </footer>
     <div class="modalWindow_js hidden">
-        <div class="modalWindow"></div>
+        <div class="modalWindow__background modalWindow__background_js"></div>
         <div class="modalWindow__form">
             <button class="modalWindow__closeBtn modalWindow__closeBtn_js"></button>
             <form class="modalWindow__form-inner" action="#" method="post">
